modules/vpc/main.tf
resource "aws_vpc" "main" {
    cidr_block = "42.4.0.0/16"

    tags = {
        "Name" = "${var.project_name}_vpc"
    }
}

resource "aws_subnet" "public" {
    vpc_id     = aws_vpc.main.id
    cidr_block = "42.4.1.0/24"
    availability_zone = "${var.aws_region}b"

    tags = {
        "Name" = "${var.project_name}_public_subnet"
    }
}

resource "aws_subnet" "private" {
    vpc_id     = aws_vpc.main.id
    cidr_block = "42.4.2.0/24"
    availability_zone = "${var.aws_region}a"

    tags = {
        "Name" = "${var.project_name}_private_subnet"
    }
}

resource "aws_internet_gateway" "this" {
    vpc_id = aws_vpc.main.id

    tags = {
        Name = "${var.project_name}-igw"
    }
}

resource "aws_eip" "nat" {
    domain = "vpc"
}

resource "aws_nat_gateway" "nat" {
    allocation_id = aws_eip.nat.id
    subnet_id     = aws_subnet.public.id

    tags = {
        Name = "${var.project_name}-private-nat"
    }

    depends_on = [aws_internet_gateway.this]
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
    }

    tags = {
    Name = "${var.project_name}-public-rt"
    }
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block     = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat.id
    }

    tags = {
        Name = "${var.project_name}-private-rt"
    }
}

resource "aws_route_table_association" "public" {
    subnet_id      = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
    subnet_id      = aws_subnet.private.id
    route_table_id = aws_route_table.private.id
}
